@@ -1,3 +1,13 @@
+2005-04-01  Diego Gonzalez <diego@pemas.net>
+
+	* gnome-about-me.c: fix the case where the self uid is wrong
+	  and the edition when the self contact is created for the
+	  first time.
+	  
+2005-03-29  Diego Gonzalez <diego@pemas.net>
+
+	* Makefile.am: fix tabs
+
 2005-02-09  Sebastien Bacher  <seb128@debian.org>
 
 	* Makefile.am: build e-util-marshal.c.
